--- a/inst/markdown/_metadata.yml
+++ b/inst/markdown/_metadata.yml
@@ -66,6 +66,7 @@ format:
     # chalkboard: true # does not work with self-contained
     # smaller: true
     dpi: 144
+  pptx: default
   html: 
     # css: styles.css
     html-math-method: katex
